HLS_reference/fir_example/errlog

****** Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2017.4.op (64-bit)
  **** SW Build 2193837 on Tue Apr 10 18:06:59 MDT 2018
  **** IP Build 2189296 on Tue Apr 10 19:39:46 MDT 2018
    ** Copyright 1986-2017 Xilinx, Inc. All Rights Reserved.

source /opt/Xilinx/Vivado/2017.4.op/scripts/vivado_hls/hls.tcl -notrace
INFO: [HLS 200-10] Running '/opt/Xilinx/Vivado/2017.4.op/bin/unwrapped/lnx64.o/vivado_hls'
INFO: [HLS 200-10] For user 'shimingsong' on host 'shimingsong-Surface-Pro' (Linux_x86_64 version 4.15.0-43-generic) on Sat Feb 16 15:34:00 PST 2019
INFO: [HLS 200-10] On os Ubuntu 18.04 LTS
INFO: [HLS 200-10] In directory '/home/shimingsong/repo_ex/HLx_Examples/DSP/fir_example'
INFO: [HLS 200-10] Opening project '/home/shimingsong/repo_ex/HLx_Examples/DSP/fir_example/hls_fir1ch_prj'.
INFO: [HLS 200-10] Adding design file 'fir.cpp' to the project
INFO: [HLS 200-10] Adding test bench file 'fir_test.cpp' to the project
INFO: [HLS 200-10] Adding test bench file 'data' to the project
INFO: [HLS 200-10] Opening solution '/home/shimingsong/repo_ex/HLx_Examples/DSP/fir_example/hls_fir1ch_prj/solution0'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xcku115-flva1517-3-e'
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
   Compiling ../../../../fir_test.cpp in debug mode
csim.mk:88: recipe for target 'obj/fir_test.o' failed
In file included from ../../../../fir_test.cpp:5:
In file included from ../../../../fir.h:16:
In file included from /opt/Xilinx/Vivado/2017.4.op/include/ap_fixed.h:67:
In file included from /opt/Xilinx/Vivado/2017.4.op/include/ap_int.h:74:
In file included from /opt/Xilinx/Vivado/2017.4.op/include/hls_half.h:57:
/opt/Xilinx/Vivado/2017.4.op/include/hls_fpo.h:391:10: error: variable 'res_flt' is uninitialized when used here [-Werror,-Wuninitialized]
  return res_flt;
         ^~~~~~~
/opt/Xilinx/Vivado/2017.4.op/include/hls_fpo.h:383:16: note: initialize the variable 'res_flt' to silence this warning
  float res_flt;
               ^
                = 0.0
/opt/Xilinx/Vivado/2017.4.op/include/hls_fpo.h:404:10: error: variable 'res_d' is uninitialized when used here [-Werror,-Wuninitialized]
  return res_d;
         ^~~~~
/opt/Xilinx/Vivado/2017.4.op/include/hls_fpo.h:396:15: note: initialize the variable 'res_d' to silence this warning
  double res_d;
              ^
               = 0.0
2 errors generated.
make: *** [obj/fir_test.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
4
    while executing
"source run_1_FIR_script.tcl"
    invoked from within
"hls::main run_1_FIR_script.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$args"
    (procedure "hls_proc" line 5)
    invoked from within
"hls_proc $argv"
INFO: [Common 17-206] Exiting vivado_hls at Sat Feb 16 15:34:02 2019...
